--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,9 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+    implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
+    implementation "com.android.support:cardview-v7:${supportLibraryVersion}"
+    implementation "com.android.support:design:${supportLibraryVersion}"
 
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     implementation "com.google.dagger:dagger:${daggerVersion}"
@@ -55,8 +57,8 @@ dependencies {
     annotationProcessor "com.ryanharter.auto.value:auto-value-gson:${autoValueGsonVersion}"
     compileOnly "com.ryanharter.auto.value:auto-value-gson-annotations:${autoValueGsonVersion}"
 
-    testImplementation "junit:junit:$junitVersion"
+    testImplementation "junit:junit:${junitVersion}"
 
-    androidTestImplementation "com.android.support.test:runner:$testRunnerVersion"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
+    androidTestImplementation "com.android.support.test:runner:${testRunnerVersion}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:${espressoVersion}"
 }
