--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,9 @@ android {
 
 dependencies {
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
-    implementation "com.android.support:cardview-v7:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
+    implementation "com.android.support:cardview-v7:${supportLibraryVersion}"
+    implementation "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}"
 
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     implementation "com.google.dagger:dagger:${daggerVersion}"
