--- a/app/versions.gradle
+++ b/app/versions.gradle
@@ -15,6 +15,7 @@ ext {
     androidCompileSdkVersion = 26
 
     supportLibraryVersion = '27.1.1'
+    constraintLayoutVersion = '1.0.2'
 
     daggerVersion = '2.11'
     rxJavaVersion = '2.1.4'
