--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     implementation "com.android.support:cardview-v7:${supportLibraryVersion}"
     implementation "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}"
 
+    implementation "android.arch.lifecycle:extensions:${androidArchVersion}"
+    annotationProcessor "android.arch.lifecycle:compiler:${androidArchVersion}"
+
     annotationProcessor "com.google.dagger:dagger-compiler:${daggerVersion}"
     implementation "com.google.dagger:dagger:${daggerVersion}"
 
