--- a/app/versions.gradle
+++ b/app/versions.gradle
@@ -17,6 +17,8 @@ ext {
     supportLibraryVersion = '27.1.1'
     constraintLayoutVersion = '1.1.2'
 
+    androidArchVersion = '1.1.1'
+
     daggerVersion = '2.11'
     rxJavaVersion = '2.1.4'
     rxAndroidVersion = '2.0.1'
